| Bug #24914 | Start Transaction with hint guessed incorrectly | ||
|---|---|---|---|
| Submitted: | 8 Dec 2006 16:15 | Modified: | 28 Dec 2006 15:29 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: NDBAPI | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | |
| Assigned to: | Jonas Oreland | Target Version: | |
[8 Dec 2006 16:15]
Jonas Oreland
[8 Dec 2006 16:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/16659 ChangeSet@1.2350, 2006-12-08 16:15:59+01:00, jonas@perch.ndb.mysql.com +3 -0 ndb - bug#24914 Fix start transaction with hint from ndbapi
[28 Dec 2006 15:29]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented fix in 5.1.15 changelog.
